# komo

./: .dockerignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package-lock.json
.github/workflows/: docker.yml
.scratch/briefing-skills/: PRD.md
.scratch/clarify-step/: PRD.md
.scratch/memory-quality/: PRD.md
.scratch/permission-policy/: PRD.md
.scratch/run-resume/: PRD.md
.scratch/skill-governance/: PRD.md
.scratch/tool-trait-v2/: PRD.md
apps/desktop/: .gitignore  components.json  electron.vite.config.ts
apps/electron-demo/: components.json  package-lock.json  package.json  tsconfig.json
crates/komo-core/: Cargo.toml
crates/komo-core/src/: lib.rs  operator_view.rs  paths.rs  rendezvous.rs
crates/komo-core/src/domain/: context.rs  events.rs  reviewer.rs  tool.rs  workday.rs
crates/komo-gui/: Cargo.toml
crates/komo-gui/src/: api.rs  chat.rs  main.rs  md.rs
crates/komo-gui/src/assets/: style.css
crates/komo-gui/src/dashboard/: mod.rs  tabs.rs
docs/: architecture-deepening-plan.md  memory-injection-plan.md  nas-ci.md  personal-agent-roadmap.md  truenas-docker.md
src/: config.rs  domain.rs  main.rs
src/agent/: daemon.rs  interaction.rs  mod.rs  policy_approver.rs  review_coordinator.rs  reviewer.rs  runtime.rs  system_prompt.rs
src/cli/: app.rs  approver.rs  channel.rs  chat.rs  cli.rs  doctor.rs  dream.rs  gateway.rs  gateway_client.rs  init.rs  inspect.rs  journey.rs  logs.rs  memory.rs  mod.rs  model.rs  pair.rs  policy.rs  resume.rs  service.rs  skill.rs  wechat.rs  wiring.rs
src/config/: mod.rs  resolved.rs  sources.rs  write.rs
src/domain/: context.rs  gateway.rs  (+7 more)
(+70 files in other folders)
